feat: add CRUD APIs for workout and food,ai