@@ -14,6 +14,7 @@ import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 import org.springframework.web.server.ResponseStatusException;
 
 @Service
@@ -46,6 +47,7 @@ public class ContentService {
                     safePayload.get("foodId"), "Food ID is required."));
             case "get-fitness-goals" -> Map.of("items", loadActiveFitnessGoals());
             case "ai-recommendations" -> getAiRecommendations(safePayload);
+            case "ai-food-personalized" -> getAiFoodPersonalized(safePayload);
             case "ai-workout-assistant" -> Map.of(
                     "answer",
                     "This endpoint is a placeholder. Use /api/v1/ai/recommendations for structured workout + food suggestions.");
@@ -100,7 +102,7 @@ public class ContentService {
         if (rows.isEmpty()) {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Workout not found.");
         }
-        Map<String, Object> workout = new LinkedHashMap<>(rows.getFirst());
+        Map<String, Object> workout = new LinkedHashMap<>(rows.get(0));
         workout.put("categories", loadWorkoutCategoriesForWorkout(workoutId));
         return workout;
     }
@@ -152,7 +154,7 @@ public class ContentService {
         if (rows.isEmpty()) {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Food not found.");
         }
-        Map<String, Object> food = new LinkedHashMap<>(rows.getFirst());
+        Map<String, Object> food = new LinkedHashMap<>(rows.get(0));
         food.put("categories", loadFoodCategoriesForFood(foodId));
         return food;
     }
@@ -169,6 +171,68 @@ public class ContentService {
         response.put("goalCodes", goalCodes);
         response.put("workouts", workouts);
         response.put("foods", foods);
+        return response;
+    }
+
+    private Map<String, Object> getAiFoodPersonalized(Map<String, Object> payload) {
+        int limit = clampInt(payload.get("limitFoods"), 6, 1, 12);
+        List<String> tags = parseStringList(payload.get("tags"));
+        Map<String, Object> answers = payload.get("answers") instanceof Map<?, ?> rawAnswers
+                ? rawAnswers.entrySet().stream()
+                        .collect(Collectors.toMap(
+                                entry -> String.valueOf(entry.getKey()),
+                                Map.Entry::getValue,
+                                (a, b) -> a,
+                                LinkedHashMap::new))
+                : Map.of();
+
+        String goal = normalizeText(answers.get("goal"));
+        String mealTime = normalizeText(answers.get("mealTime"));
+        String avoid = normalizeText(answers.get("avoid"));
+
+        List<Map<String, Object>> baseFoods = loadLatestFoods(200);
+        Map<Integer, List<Map<String, Object>>> categoryMap = loadFoodCategoryMapByFoodIds(extractIds(baseFoods, "foodId"));
+
+        List<Map<String, Object>> scored = new ArrayList<>();
+        for (Map<String, Object> row : baseFoods) {
+            Map<String, Object> food = new LinkedHashMap<>(row);
+            int foodId = ((Number) food.get("foodId")).intValue();
+            List<Map<String, Object>> categories = categoryMap.getOrDefault(foodId, List.of());
+            food.put("categories", categories);
+
+            ScoreResult result = scoreFood(food, categories, tags, goal, mealTime, avoid);
+            if (result.score() <= 0) continue;
+            food.put("matchScore", result.score());
+            food.put("matchReasons", result.reasons());
+            scored.add(food);
+        }
+
+        scored.sort((a, b) -> Integer.compare(
+                ((Number) b.getOrDefault("matchScore", 0)).intValue(),
+                ((Number) a.getOrDefault("matchScore", 0)).intValue()));
+        if (scored.size() > limit) {
+            scored = new ArrayList<>(scored.subList(0, limit));
+        }
+
+        List<Map<String, Object>> followUpQuestions = new ArrayList<>();
+        if (!StringUtils.hasText(goal)) {
+            followUpQuestions.add(Map.of(
+                    "id", "goal",
+                    "question", "Muc tieu cua ban la gi? (giam mo / tang co / giu dang)"));
+        }
+        if (!StringUtils.hasText(mealTime)) {
+            followUpQuestions.add(Map.of(
+                    "id", "mealTime",
+                    "question", "Ban muon goi y cho bua nao? (truoc tap / sau tap / bua chinh)"));
+        }
+
+        String summary = buildPersonalizedSummary(tags, goal, mealTime, avoid, scored.size());
+        Map<String, Object> response = new LinkedHashMap<>();
+        response.put("tags", tags);
+        response.put("answers", answers);
+        response.put("summary", summary);
+        response.put("followUpQuestions", followUpQuestions);
+        response.put("foods", scored);
         return response;
     }
 
@@ -583,5 +647,177 @@ public class ContentService {
         if (upper.contains("GAIN") || upper.contains("MUSCLE") || upper.contains("BULK")) return "GAIN_MUSCLE";
         if (upper.contains("MAIN")) return "MAINTAIN";
         return null;
+    }
+
+    private static List<String> parseStringList(Object value) {
+        if (!(value instanceof List<?> list)) return List.of();
+        List<String> output = new ArrayList<>();
+        for (Object item : list) {
+            String normalized = normalizeText(item);
+            if (normalized != null) {
+                output.add(normalized);
+            }
+        }
+        return output.stream().distinct().toList();
+    }
+
+    private static String normalizeText(Object value) {
+        if (value == null) return null;
+        String text = String.valueOf(value).trim();
+        return text.isEmpty() ? null : text;
+    }
+
+    private static double decimalOrZero(Object value) {
+        if (value instanceof BigDecimal decimal) return decimal.doubleValue();
+        if (value instanceof Number number) return number.doubleValue();
+        try {
+            return value == null ? 0d : Double.parseDouble(String.valueOf(value));
+        } catch (NumberFormatException ignored) {
+            return 0d;
+        }
+    }
+
+    private static int intOrZero(Object value) {
+        if (value instanceof Number number) return number.intValue();
+        try {
+            return value == null ? 0 : Integer.parseInt(String.valueOf(value));
+        } catch (NumberFormatException ignored) {
+            return 0;
+        }
+    }
+
+    private static ScoreResult scoreFood(
+            Map<String, Object> food,
+            List<Map<String, Object>> categories,
+            List<String> tags,
+            String goal,
+            String mealTime,
+            String avoid) {
+        int score = 1;
+        List<String> reasons = new ArrayList<>();
+        double protein = decimalOrZero(food.get("protein"));
+        double carbs = decimalOrZero(food.get("carbs"));
+        double fat = decimalOrZero(food.get("fat"));
+        int calories = intOrZero(food.get("calories"));
+
+        String categoryText = categories.stream()
+                .map(category -> String.valueOf(category.getOrDefault("name", "")))
+                .collect(Collectors.joining(" "))
+                .toLowerCase(Locale.ROOT);
+        String foodText = (String.valueOf(food.getOrDefault("name", "")) + " "
+                + String.valueOf(food.getOrDefault("description", "")) + " "
+                + categoryText).toLowerCase(Locale.ROOT);
+
+        for (String rawTag : tags) {
+            String tag = rawTag.toUpperCase(Locale.ROOT);
+            switch (tag) {
+                case "HIGH_PROTEIN" -> {
+                    if (protein >= 20) {
+                        score += 4;
+                        reasons.add("Dam cao (>=20g)");
+                    } else if (protein >= 12) {
+                        score += 2;
+                        reasons.add("Dam kha tot");
+                    }
+                }
+                case "LOW_CARB" -> {
+                    if (carbs <= 18) {
+                        score += 3;
+                        reasons.add("Carb thap");
+                    }
+                }
+                case "HIGH_CARB" -> {
+                    if (carbs >= 30) {
+                        score += 3;
+                        reasons.add("Carb cao phu hop nap nang luong");
+                    }
+                }
+                case "LOW_FAT" -> {
+                    if (fat <= 10) {
+                        score += 3;
+                        reasons.add("Chat beo thap");
+                    }
+                }
+                case "LOW_CALORIE" -> {
+                    if (calories > 0 && calories <= 350) {
+                        score += 3;
+                        reasons.add("Calo vua phai");
+                    }
+                }
+                case "BALANCED" -> {
+                    if (protein >= 15 && carbs >= 15 && carbs <= 55 && fat <= 20) {
+                        score += 3;
+                        reasons.add("Macro can bang");
+                    }
+                }
+                default -> {
+                }
+            }
+        }
+
+        String lowerGoal = goal == null ? "" : goal.toLowerCase(Locale.ROOT);
+        if (lowerGoal.contains("giam") || lowerGoal.contains("mo") || lowerGoal.contains("cut")) {
+            if (protein >= 20) score += 3;
+            if (calories > 0 && calories <= 350) score += 2;
+            if (fat <= 12) score += 1;
+        } else if (lowerGoal.contains("tang") || lowerGoal.contains("co") || lowerGoal.contains("bulk")) {
+            if (protein >= 25) score += 3;
+            if (carbs >= 30) score += 2;
+            if (calories >= 350) score += 1;
+        } else if (lowerGoal.contains("giu")) {
+            if (protein >= 18) score += 2;
+            if (calories >= 250 && calories <= 500) score += 2;
+        }
+
+        String lowerMealTime = mealTime == null ? "" : mealTime.toLowerCase(Locale.ROOT);
+        if (lowerMealTime.contains("truoc")) {
+            if (carbs >= 20 && fat <= 12) score += 2;
+        } else if (lowerMealTime.contains("sau")) {
+            if (protein >= 22) score += 3;
+            if (fat <= 15) score += 1;
+        }
+
+        if (StringUtils.hasText(avoid)) {
+            String[] tokens = avoid.toLowerCase(Locale.ROOT).split("[,;/\\s]+");
+            for (String token : tokens) {
+                if (token.length() < 2) continue;
+                if (foodText.contains(token)) {
+                    score -= 6;
+                    reasons.add("Co nguyen lieu ban muon tranh: " + token);
+                    break;
+                }
+            }
+        }
+
+        if (reasons.isEmpty()) {
+            reasons.add("Phu hop thong tin da chon");
+        }
+        return new ScoreResult(score, reasons);
+    }
+
+    private static String buildPersonalizedSummary(
+            List<String> tags,
+            String goal,
+            String mealTime,
+            String avoid,
+            int count) {
+        StringBuilder sb = new StringBuilder("Da loc ").append(count).append(" mon theo tieu chi cua ban");
+        if (!tags.isEmpty()) {
+            sb.append(" | tags: ").append(String.join(", ", tags));
+        }
+        if (StringUtils.hasText(goal)) {
+            sb.append(" | muc tieu: ").append(goal);
+        }
+        if (StringUtils.hasText(mealTime)) {
+            sb.append(" | bua: ").append(mealTime);
+        }
+        if (StringUtils.hasText(avoid)) {
+            sb.append(" | tranh: ").append(avoid);
+        }
+        sb.append(".");
+        return sb.toString();
+    }
+
+    private record ScoreResult(int score, List<String> reasons) {
     }
 }
